--- a/CampusEventTracker/app/src/main/res/values/strings.xml
+++ b/CampusEventTracker/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Campus Event Tracker</string>
+    <string name="login_header">User Login</string>
+    <string name="email_PH">School Email</string>
+    <string name="password_PH">Password</string>
+    <string name="btnLogin_text">Log In</string>
+    <string name="btnRegister_text">Register</string>
 </resources>
