--- a/CampusEventTracker/app/src/main/res/values/strings.xml
+++ b/CampusEventTracker/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="txtEventInfo_Description">Event Description:</string>
     <string name="txtEventInfo_Date">Date:</string>
     <string name="txtEventInfo_Time">Time:</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
