--- a/CampusEventTracker/app/src/main/res/values/strings.xml
+++ b/CampusEventTracker/app/src/main/res/values/strings.xml
@@ -10,8 +10,8 @@
     <string name="txtEventInfo_Name">Event Name:</string>
     <string name="txtEventInfo_Location">Location:</string>
     <string name="txtEventInfo_Description">Event Description:</string>
-    <string name="txtEventInfo_Date">Date:</string>
-    <string name="txtEventInfo_Time">Time:</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txtEventInfo_Date">Start Date:</string>
+    <string name="txtEventInfo_Time">Start Time:</string>
+    <string name="txtEventInfo_EndTime">End Time:</string>
+    <string name="txtEventInfo_EndDate">End Date:</string>
 </resources>
